Add admin panel with stats API and moderation tools
Backend:
- Add /admin API for overview stats, analytics, user management, review moderation
- Add createdAt timestamps and banned flag on users
- Restrict GET /users and GET /reviews to admins
- Preserve /auth/me and /auth/verify-student from verified-user work

Frontend:
- Add admin-frontend Angular app (overview, analytics, operations pages)
- Admin login requires ROLE_ADMIN; works with any registered email