@@ -3,13 +3,14 @@ package com.curtinhonestly.backend.service;
 import com.curtinhonestly.backend.domain.User;
 import com.curtinhonestly.backend.domain.UserRole;
 import com.curtinhonestly.backend.repo.UserRepo;
+import com.curtinhonestly.backend.util.StudentEmailValidator;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -24,26 +25,21 @@ public class UserService {
         User user = new User();
         user.setEmail(email);
         user.setPassword(passwordEncoder.encode(password));
-        user.setUsername(email); // Set username as email for simplicity
-
-        // Assign USER role by default
-        user.setRoles(Arrays.asList(UserRole.ROLE_USER));
+        user.setVerifiedStudent(StudentEmailValidator.isStudentEmail(email));
+        user.setRoles(List.of(UserRole.ROLE_USER));
 
         User savedUser = userRepo.saveAndFlush(user);
-        log.info("User created successfully with ID: {}", savedUser.getId());
+        log.info("User created successfully with ID: {}, verifiedStudent={}", savedUser.getId(), savedUser.isVerifiedStudent());
         return savedUser;
     }
 
-    // Method to create admin user
     public User createAdminUser(String email, String password) {
         log.info("Creating admin user: {}", email);
         User user = new User();
         user.setEmail(email);
         user.setPassword(passwordEncoder.encode(password));
-        user.setUsername(email);
-
-        // Assign ADMIN and USER roles
-        user.setRoles(Arrays.asList(UserRole.ROLE_ADMIN, UserRole.ROLE_USER));
+        user.setVerifiedStudent(StudentEmailValidator.isStudentEmail(email));
+        user.setRoles(List.of(UserRole.ROLE_ADMIN, UserRole.ROLE_USER));
 
         User savedUser = userRepo.saveAndFlush(user);
         log.info("Admin user created successfully with ID: {}", savedUser.getId());
@@ -52,5 +48,27 @@ public class UserService {
 
     public User getUserByEmail(String email) {
         return userRepo.findByEmail(email).orElseThrow(() -> new RuntimeException("User not found"));
+    }
+
+    public User verifyStudentEmail(String email, String studentEmail) {
+        User user = getUserByEmail(email);
+
+        if (user.isVerifiedStudent()) {
+            throw new IllegalStateException("Account is already verified as a student.");
+        }
+
+        if (!StudentEmailValidator.isStudentEmail(studentEmail)) {
+            throw new IllegalArgumentException("A valid @student.curtin.edu.au email is required.");
+        }
+
+        if (userRepo.findByEmail(studentEmail).filter(existing -> !existing.getId().equals(user.getId())).isPresent()) {
+            throw new IllegalArgumentException("That student email is already linked to another account.");
+        }
+
+        user.setEmail(studentEmail);
+        user.setVerifiedStudent(true);
+        User savedUser = userRepo.saveAndFlush(user);
+        log.info("User {} verified as student with email {}", savedUser.getId(), studentEmail);
+        return savedUser;
     }
 }
